--- a/README
+++ b/README
@@ -12,6 +12,8 @@ Usage:
 Example:
 ./DAKMeans toy_norm2.txt 2174 2 4 ./toy_output
 
+Your resulted cluster centers should be close to the ones shown in toy_norm2_cluster.txt
+
 Compile:
 g++ DAKMeans.cpp -O3 -Wall -I/path/to/your/include -L/path/to/your/lib -o DAKMeans -lflann -pthread
 Replace /path/to/your/include and /path/to/your/lib with corresponding path to your include directory and lib directory, or others where you placed the FLANN library in.
